# crispr-analysis-utils

./: .Rbuildignore  .gitignore  .pre-commit-config.yaml  DESCRIPTION  LICENSE  NAMESPACE  README.md  _pkgdown.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
R/: normalization.R
docs/: contributing.md  getting-started.md  index.md  r-api.md  r.md
docs/python/: gem-mapper.md  guide-qc.md  index.md  normalization.md  reference.md  tutorial-guide-alignment-qc.md  utils.md
docs/python/reference/: build-gem-index.md  counts-per-million.md  filter-guide-alignments.md  guides-to-fastq.md  index.md  map-guides-with-gem.md  run-shell-cmd.md
man/: counts_per_million.Rd
scripts/: run_guide_alignment_qc.py  run_guide_alignment_qc.sbatch
src/crispr_analysis_utils/: __init__.py  gem_mapper.py  guide_qc.py  normalization.py  utils.py
tests/: test_gem_mapper.py  test_guide_qc.py  test_normalization.py  test_utils.py  testthat.R
tests/testthat/: test-normalization.R
